fixed navigation hover clipping

--- a/week01/styles/layout.css
+++ b/week01/styles/layout.css
@@ -17,6 +17,7 @@ body {
     flex: 1 1 100%;
     text-decoration: none;
     color: #fff;
+    border-bottom: 3px solid #000;
 }
 .navigation a:hover {
     border-bottom: 3px solid yellow;
